--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Upload Python Package
+name: Create Release
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   release:
-    name: Create Release
+    name: Create Release with Changelog
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -28,23 +28,3 @@ jobs:
         with:
           body_path: release_message.md
 
-  deploy:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-      run: |
-        python setup.py sdist bdist_wheel
-        twine upload dist/*
