--- a/.github/workflows/rename_project.yml
+++ b/.github/workflows/rename_project.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Prepare gist as metrics holder
         if: steps.is_template.outputs.is_template == 'true'
+        env:
+          GISTTOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "Preparing gistt with -a(author) ${{ env.REPOSITORY_OWNER }} -n(name) ${{ env.REPOSITORY_NAME }} -u(urlname) ${{ env.REPOSITORY_URLNAME }}"
           .github/prepare_gist_metrics.sh -a ${{ env.REPOSITORY_OWNER }} -n ${{ env.REPOSITORY_NAME }} -u ${{ env.REPOSITORY_URLNAME }} -d "Awesome ${{ env.REPOSITORY_NAME }} created by ${{ env.REPOSITORY_OWNER }}"
