--- a/.github/workflows/rename_project.yml
+++ b/.github/workflows/rename_project.yml
@@ -35,7 +35,7 @@ jobs:
         if: steps.is_template.outputs.is_template == 'true'
         run: |
           echo "Renaming the project with -a(author) ${{ env.REPOSITORY_OWNER }} -n(name) ${{ env.REPOSITORY_NAME }} -u(urlname) ${{ env.REPOSITORY_URLNAME }}"
-          .github/rename_project.sh -a ${{ env.REPOSITORY_OWNER }} -n ${{ env.REPOSITORY_NAME }} -u ${{ env.REPOSITORY_URLNAME }} -d "Awesome ${{ env.REPOSITORY_NAME }} created by ${{ env.REPOSITORY_OWNER }}"
+          .github/rename_project.sh -a ${{ env.REPOSITORY_OWNER }} -n ${{ env.REPOSITORY_NAME }} -u ${{ env.REPOSITORY_URLNAME }} -d "Intoduction page of ${{ env.REPOSITORY_OWNER }} with github statictic"
 
       - name: Test gh api
         run: |
