added other metrics

--- a/.github/workflows/rename_project.yml
+++ b/.github/workflows/rename_project.yml
@@ -70,6 +70,6 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "✅ Ready to code."
+          commit_message: "Generated from template ✅"
           # commit_options: '--amend --no-edit'
           push_options: --force
